1830
It works, with a slightly different syntax:
```scala
import Predef.{any2stringadd => _}

class Foo {
  (new Object) + ""
}
```

The output:
```scala
hiding.scala:4: error: value + is not a member of java.lang.Object
  (new Object) + ""
               ^
one error found
```
